content/manual/versions/v5.0/source/includes/fact-platform-support-enterprise-red-hat.rst
.. note:: EOL Notice

   - MongoDB 5.0 Enterprise Edition removes support for
     :abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle 6 on
     :ref:`x86_64 <prod-notes-supported-platforms-x86_64>`

   - MongoDB Enterprise Edition removed support for 
     RHEL 7 / CentOS / Oracle 
     :ref:`PPC64LE<prod-notes-supported-platforms-PPC64LE>` 
     between versions 4.0 and 5.0. However, these 
     architectures are supported for 5.0.X versions.

MongoDB {+version+} Enterprise Edition supports the following
:red:`64-bit` versions of Red Hat Enterprise Linux (RHEL), CentOS Linux,
Oracle Linux [#oracle-linux]_, Rocky Linux, and AlmaLinux [#rocky-almalinux]_ 
on :ref:`x86_64 <prod-notes-supported-platforms-x86_64>` architecture:

- :abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle / Rocky / Alma 8

- :abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle 7

MongoDB only supports the 64-bit versions of these platforms.

MongoDB {+version+} Enterprise Edition on
:abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle / Rocky / Alma 
Linux also supports the 
:ref:`ARM64 <prod-notes-supported-platforms-ARM64>` architecture on
select platforms.

See :ref:`prod-notes-supported-platforms` for more information.

.. [#oracle-linux]

   MongoDB only supports Oracle Linux running the Red Hat Compatible
   Kernel (RHCK). MongoDB does **not** support the Unbreakable
   Enterprise Kernel (UEK).

.. [#rocky-almalinux]

   MongoDB on-premises products released for RHEL version 8.0+ are 
   compatible with and supported on Rocky Linux version 8.0+ and 
   AlmaLinux version 8.0+, contingent upon those distributions meeting 
   their obligation to deliver full RHEL compatibility.

